# pyhep

./: .cvsignore  COPYRIGHT  Makefile  Makefile.bak  README  clean  config.mk  config.mk.in  config.status  configure  configure.in  env.sh  make-dist  patch  pyhep.spec  pyhep.spec.in  standard.mk  todo.txt
autom4te.cache/: output.0  traces.0
doc/: .cvsignore  Makefile  cernlib.tex  drawing.tex  expressions.tex  filesystem.tex  geometry.tex  histogram.tex  histograms.tex  interactive.tex  introduction.tex  lorentz.tex  particles.tex  plotting.tex  pyhep.l2h  pyhep.tex  root.tex  table.tex  tables.tex
doc/html/: .cvsignore
doc/html/pyhep/: about.html  contents.html  evtgen1.txt  front.html  hbook1.txt  hbookls.txt  histogram1.txt  images.pl  images.tex  index.html  internals.pl  intlabels.pl  labels.pl  module-hep.histogram.html  module-hep.lorentz.html  module-hep.table.html  node10.html  node11.html  node12.html  node13.html  node14.html  node15.html  node16.html  node17.html  node18.html  node19.html  node21.html  node23.html  node24.html  node25.html  node26.html  node28.html  node29.html  node3.html  node30.html  node31.html  node32.html  node33.html  node34.html  node35.html  (+35 more)
doc/perl/: l2hinit.perl
doc/samples/: .cvsignore  hbook1.py  hbookcp.py  hbookls.py  histograms.pickle  root1.py  rootls.py  t1.py  table2.py  table3.py  tracks.table  tracks.table.metadata
doc/texinputs/: distutils.sty
doc/tools/: buildindex.py  getpagecounts  push-docs.sh  py2texi.el
ext/: .cvsignore  Makefile  PyBoolArray.cc  PyBoolArray.hh  PyContour.cc  PyContour.hh  PyExpr.cc  PyExpr.hh  PyFourVector.cc  PyFourVector.hh  PyHist.cc  PyHist.hh  PyHistogram1D.cc  PyHistogram1D.hh  PyHistogram2D.cc  PyHistogram2D.hh  PyImageFile.cc  PyImageFile.hh  PyIterator.cc  PyIterator.hh  PyRandom.cc  PyRandom.hh  PyRow.cc  PyRow.hh  PyRowDict.cc  PyRowDict.hh  PyRowObject.cc  PyRowObject.hh  PyScatter.cc  PyScatter.hh  PyTable.cc  PyTable.hh  PyTimer.cc  PyTimer.hh  PyX11Window.cc  PyX11Window.hh  aggrender.cc  aggrender.hh  config.h  config.h.in  (+14 more)
ext/cernlib/: Makefile  cernlib.F  cernlib.hh  depend.mk  ext.cc  hbook.cc  hbook.hh  hbook.inc  minuit.cc  minuit.hh  util.cc  util.hh
ext/evtgen/: Makefile  PyGenerator.cc  PyGenerator.hh  PyParticle.cc  PyParticle.hh  ext.cc
ext/root/: .cvsignore  Makefile  TBlob.cc  TBlob.hh  TBlobLinkDef.hh  depend.mk  ext.cc  metadata.cc  metadata.hh  root.i  root.py  root_wrap.cc  tree.cc  tree.hh
notes/: TODO  benchmarks.txt  bugs  draw-plot.txt  goals.txt  join-notes.txt  objtemplate-notes.txt  styles.txt
old/: cut1.py.1  ezplot.py.1
py/hep/: .cvsignore  __init__.py  bool.py  config.py  config.py-install  config.py.in  cuts.py  fn.py  fs.py  interactive.py  latex.py  lorentz.py.orig  lorentz.py.rej  mctruth.py  minimize.py  modified.py  num.py  particle.py  pdt.py  py.py  rand_util.py  test.py  text.py  timer.py  vec.py  xml_pickle.py  xml_util.py
py/hep/cernlib/: __init__.py  hbook.py  minuit.py  num.py
py/hep/data/: .cvsignore  pdt.pickle  stdhep-schema.xml
py/hep/draw/: __init__.py  fonts.py  imagefile.py  latex.py  metafile.py  postscript.py  xwindow.py
py/hep/evtgen/: __init__.py
py/hep/expr/: __init__.py  classes.py  compiler.py  expr_parser.py  op.py  physics.py  symbols.py
py/hep/hist/: __init__.py  axis.py  ezplot.py  fit.py  function.py  histogram.py  plot.py  scatter.py  splot.py  util.py
py/hep/root/: ROOTSYS  __init__.py  root.py
py/hep/table/: __init__.py  reference.py
scripts/: .cvsignore  delete-root-metadata.py  dump-mc-truth  make_particle_data.py  profile  pyhep  pyhep-install  pyhep-install.in  pyhep-pythonpath-install  pyhep-pythonpath-install.in  pyhep.in  pyprof  release.sh  root-ls  upload-release.sh
test/: test
test/hep/: .cvsignore  boolarray.py  boolarray2.py  cut1.eps  cut1.out  cut1.ps  cut1.py  cut2.out  cut2.pickle  cut2.ps  cut2.py  fisher1.out  fisher1.ps  fisher1.py  fisherplot1.out  fisherplot1.ps  fisherplot1.py  fs1.py  fs10.out  fs10.py  fs10.root  fs11.hbook  fs11.py  fs2.py  fs3.py  fs4.py  fs5.py  fs6.py  fs7.py  fs8.py  fs9.py  interactive1.out  interactive1.ps  latex1.dvi  latex1.out  latex1.py  lorentz1.py  lorentz2.py  lorentz3.py  lorentz4.out  (+10 more)
test/hep/cernlib/: .cvsignore  binned1d.hbook  binned1d.py  binned2d.hbook  binned2d.py  cwn1.hbook  cwn1.py  cwn2.hbook  cwn2.py  dir1.hbook  dir1.py  integrate1.py  integrate2.out  integrate2.py  minuit-min1.out  minuit-min1.py  minuit-min2.out  minuit-min2.py  minuit-min3.out  minuit-min3.py  minuit-umlfit1.out  minuit-umlfit1.py  minuit-umlfit2.out  minuit-umlfit2.py  minuit-umlfit2.table  minuit-umlfit2.table.metadata  minuit-umlfit3.out  minuit-umlfit3.py  minuit-umlfit4.out  minuit-umlfit4.py  mkdir1.hbook  mkdir1.py  remove1.hbook  remove1.py  remove2.hbook  remove2.py  rwn.hbook  rwn.py  stress1.py
test/hep/draw/: .cvsignore  draw1.emf  draw1.eps  draw1.py  draw2.emf  draw2.eps  draw2.py  draw3.emf  draw3.eps  draw3.py  hsv.emf  hsv.ps  hsv.py  latex1.emf  latex1.eps  latex1.py  layout1.ps  layout1.py  lines1.emf  lines1.eps  lines1.py  marker1.emf  marker1.eps  marker1.py  sample1.out  sample2.ps  symbols1.emf  symbols1.ps  symbols1.py  x11color1.py
test/hep/evtgen/: generate1.out  generate1.py
test/hep/expr/: .cvsignore  call1.out  call1.py  compile1.out  compile1.py  compile2.py  compile3.out  compile3.py  compile4.py  compile5.out  compile5.py  compile6.out  compile6.py  compile7.py  parse1.py
test/hep/hist/: .cvsignore  add1.py  chisq-fit1.out  chisq-fit1.py  chisq-fit2.out  chisq-fit2.py  contour1.eps  contour1.out  contour1.py  divide1.py  error1.py  error2.py  error3.py  ezplot1.ps  ezplot1.py  ezplot2.ps  ezplot2.py  ezplot3.eps  ezplot3.py  function1.py  hist1d3.py  hist1d4.py  hist2d1.out  hist2d1.py  normalize1.py  oned1.py  oned2.py  operation1.py  operation2.py  pickle1.pickle  pickle1.py  pickle2.pickle  pickle2.py  plot1d1.eps  plot1d1.py  plot1d2.eps  plot1d2.py  plot1d3.eps  plot1d3.py  plot1d4.py  (+22 more)
test/hep/root/: .cvsignore  binned1d.out  binned1d.py  binned1d.root  binned2d.out  binned2d.py  binned2d.root  (+28 more)
(+70 files in other folders)
